# qutritium

./: .gitignore  404.html  CHANGES.txt  LICENSE.txt  README.md  index.html  mkdocs.yml  qutrit.drawio  requirements.txt  setup.cfg  setup.py
API documentation/: index.html
Change Log/: index.html
Copyright and Licensing/: index.html
docs/: index.md  reference.md
explanation/: index.html
how-to-guides/: index.html
reference/: index.html
scripts/: QC_decomposition_script.py  VM_script.py  VZ-proof.ipynb  calibration_flow_demo.ipynb  decomposition_permutation_gate.ipynb  package_tutorial.ipynb
scripts/internal_use_only/: calibration.ipynb  constant.py  read_data.ipynb  read_quito.ipynb  utility.py
site/reference/: index.html
src/: algo_implementation.py  analyzer.py  backend_ibm.py  constant.py  ot.json  pulse.py  pulse_creation.py  simple_backend_log.py  unitary_gate.py  utility.py  zo.json
src/backend/: QASM_backend.py  VM_main.py  backend_ibm.py  test.ipynb
src/calibration/: __init__.py  amplitude_amplification.ipynb  calibration_01.py  calibration_12.py  calibration_base.py  calibration_utility.py  discriminator.py  drag.py  drag_dephase.py  drag_leakage.py  fine_tune.py  mutual_attr.py  rough_rabi.py  shared_attr.py  technique_basic.py  test_cali.py  transmission_reflection.py  utility.py
src/characterization/: constant.py  control_tomography_qudit.ipynb  ramsey.ipynb
test/: calibration_flow_demo.ipynb  check_backend_functions.ipynb  test_IBM_account.ipynb  test_modify_model.py  test_pulse.py
tutorials/: index.html
(+32 files in other folders)
