[metadata]
name=qutritium
version=0.0.1
author=Son Pham, Tien Nguyen
description=Qutritium package provides basic calibration and features for qutrit system using Qiskit and other quantum packages
long_description=file: README.md, LICENSE.txt
long_description_content_type=text/markdown
url=https://github.com/spham1611/qutritium
project_urls=
    Bug Tracker = https://github.com/spham1611/qutritium/~/issues
    repository = https://github.com/spham1611/qutritium
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    = src
packages=find:
python_requires=>=3.6
[options.packages.find]
where=src